# script-launcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dev-tools-python/: ScriptLauncher.spec  launcher.sh  requirements.txt  run.py  run.sh  test_debug.py
dev-tools-python/script_launcher/: main.py
dev-tools-python/script_launcher/core/: __init__.py  executor.py  script_manager.py
dev-tools-python/script_launcher/gui/: __init__.py  window.py
dev-tools-python/script_launcher/gui/widgets/: __init__.py  console_log.py  script_editor.py  script_list.py
dev-tools-python/script_launcher/utils/: __init__.py  icons.py  logger.py
dev-tools-python/scripts/SaveEnv/: main.py  meta.json
dev-tools-python/scripts/Stop container/: meta.json
tests/: README.md  __init__.py  test_executor.py  test_gui.py  test_script_manager.py
